// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots renderers/DropdownFilter default 1`] = `
<div
  className="canvasDropdownFilter"
>
  <div
    className="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <select
        className="euiSelect euiSelect--fullWidth euiSelect--compressed canvasDropdownFilter__select"
        data-test-subj="canvasDropdownFilter__select"
        onChange={[Function]}
        onMouseUp={[Function]}
        value=""
      >
        <option
          selected={false}
          value="%%CANVAS_MATCH_ALL%%"
        >
          -- ANY --
        </option>
      </select>
      <div
        className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          className="euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            className="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="arrowDown"
            size="s"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/DropdownFilter with choices 1`] = `
<div
  className="canvasDropdownFilter"
>
  <div
    className="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <select
        className="euiSelect euiSelect--fullWidth euiSelect--compressed canvasDropdownFilter__select"
        data-test-subj="canvasDropdownFilter__select"
        onChange={[Function]}
        onMouseUp={[Function]}
        value=""
      >
        <option
          selected={false}
          value="%%CANVAS_MATCH_ALL%%"
        >
          -- ANY --
        </option>
        <option
          selected={false}
          value="1"
        >
          Item One
        </option>
        <option
          selected={false}
          value="2"
        >
          Item Two
        </option>
        <option
          selected={false}
          value="3"
        >
          Item Three
        </option>
      </select>
      <div
        className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          className="euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            className="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="arrowDown"
            size="s"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/DropdownFilter with choices and new value 1`] = `
<div
  className="canvasDropdownFilter"
>
  <div
    className="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <select
        className="euiSelect euiSelect--fullWidth euiSelect--compressed canvasDropdownFilter__select"
        data-test-subj="canvasDropdownFilter__select"
        onChange={[Function]}
        onMouseUp={[Function]}
        value="selectedValue"
      >
        <option
          selected={false}
          value="%%CANVAS_MATCH_ALL%%"
        >
          -- ANY --
        </option>
        <option
          selected={false}
          value="1"
        >
          Item One
        </option>
        <option
          selected={false}
          value="2"
        >
          Item Two
        </option>
        <option
          selected={false}
          value="3"
        >
          Item Three
        </option>
      </select>
      <div
        className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          className="euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            className="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="arrowDown"
            size="s"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/DropdownFilter with choices and value 1`] = `
<div
  className="canvasDropdownFilter"
>
  <div
    className="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <select
        className="euiSelect euiSelect--fullWidth euiSelect--compressed canvasDropdownFilter__select"
        data-test-subj="canvasDropdownFilter__select"
        onChange={[Function]}
        onMouseUp={[Function]}
        value="Item Two"
      >
        <option
          selected={false}
          value="%%CANVAS_MATCH_ALL%%"
        >
          -- ANY --
        </option>
        <option
          selected={false}
          value="1"
        >
          Item One
        </option>
        <option
          selected={false}
          value="2"
        >
          Item Two
        </option>
        <option
          selected={false}
          value="3"
        >
          Item Three
        </option>
      </select>
      <div
        className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          className="euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            className="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="arrowDown"
            size="s"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots renderers/DropdownFilter with new value 1`] = `
<div
  className="canvasDropdownFilter"
>
  <div
    className="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
  >
    <div
      className="euiFormControlLayout__childrenWrapper"
    >
      <select
        className="euiSelect euiSelect--fullWidth euiSelect--compressed canvasDropdownFilter__select"
        data-test-subj="canvasDropdownFilter__select"
        onChange={[Function]}
        onMouseUp={[Function]}
        value="selectedValue"
      >
        <option
          selected={false}
          value="%%CANVAS_MATCH_ALL%%"
        >
          -- ANY --
        </option>
      </select>
      <div
        className="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <span
          className="euiFormControlLayoutCustomIcon"
        >
          <span
            aria-hidden="true"
            className="euiFormControlLayoutCustomIcon__icon"
            data-euiicon-type="arrowDown"
            size="s"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;
